--- a/_config.yml
+++ b/_config.yml
@@ -1,14 +1,10 @@
-# Site settings
-title: Your awesome title
+title: Lavori sulla casa a San Giovenale
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Lavori svolti nel rifacimento della nostra casa a San Giovenale.
 baseurl: "" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://sangiovenale.github.io"
+timezone: Europe/Rome
 
 # Build settings
 markdown: redcarpet
